# OpenZen

./: README.md  build.gradle
.github/workflows/: build-loader.yml  main.yml  main1.yml
native/: vcpkg.json
native/loader/: CMakeLists.txt
native/loader/src/: MainWindow.cpp  MainWindow.h  loader.h  main.cpp
paste/: README.md
src/main/java/asm/patchify/loader/: PatchTransformer.java
src/main/java/shit/zen/hud/: HudElement.java
src/main/java/shit/zen/modules/: Module.java
src/main/java/shit/zen/modules/impl/combat/: KillAura.java
src/main/java/shit/zen/modules/impl/movement/: Scaffold.java
src/main/java/shit/zen/patch/: ChatScreenPatch.java  LivingEntityRendererPatch.java
